--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "jquery.tocify.js",
     "version": "1.7.1",
-    "homepage": "http://gregfranko.com/jquery.tocify.js",
+    "homepage": "https://github.com/aleray/jquery.tocify.js",
     "authors": [
         "gfranko <gregfranko5@gmail.com>"
     ],
